--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.8.1
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 dj-database-url==2.2.0
 Django==4.2.13
+gunicorn==22.0.0
 idna==3.7
 lxml==5.2.2
+packaging==24.1
 psycopg2==2.9.9
 requests==2.32.3
 soupsieve==2.5
