--- a/yt_transcription/requirements.txt
+++ b/yt_transcription/requirements.txt
@@ -14,4 +14,4 @@ soupsieve==2.5
 sqlparse==0.5.0
 typing-extensions==4.12.2
 urllib3==2.2.2
-whitenoise==6.4.0  # Adicione esta linha ao seu requirements.txt
+whitenoise==6.4.0
