--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==24.2.0
 beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
+dj-database-url==2.2.0
 Django==5.1
 gunicorn==23.0.0
 h11==0.14.0
