--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
 dj-database-url==2.2.0
-Django==5.1
+Django==5.0.2
 gunicorn==23.0.0
 h11==0.14.0
 html5lib==1.1
@@ -30,3 +30,4 @@ websocket-client==1.8.0
 whitenoise==6.7.0
 wsproto==1.2.0
 youtube-transcript-api==0.6.2
+youtube_dl==2021.12.17
